--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,19 +14,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: cd client/
-    - run: npm ci
-    - run: npx elm make
-    - run: npx elm-test
+    - name: Use Elm
+    - uses: justgook/setup-elm@1.2.0
+    - run: elm make client/src/Main.elm
+    - run: elm-test
