--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,5 +18,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: Use Elm
       uses: justgook/setup-elm@1.2.0
-    - run: elm make client/src/Main.elm
+    - run: cd client/
+    - run: elm make src/Main.elm
     - run: elm-test
