--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,10 +22,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
+      working_directory: ./client
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd client/
     - run: npx elm make src/Main.elm
     - run: npx elm-test
