moved client folder

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,9 +18,8 @@ jobs:
       matrix:
         node-version: [16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-    defaults:
-      run:
-        working-directory: ./client
+    env:
+      working-directory: ./client
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
